manifests/04-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: deployment-nodeport-svc
  namespace: display-users
spec:
  type: NodePort
  selector:
    app: display-users
  ports:
    - port: 80
      targetPort: 3000
      # nodePort: 30007
      name: http
