manifests/05-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: display-users-ingress
  namespace: display-users
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: ingress.k8s.aws/alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: display-users-ingress
  namespace: display-users
  labels:
    app: display-users
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: display-users-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: / # display-users will return the root path, this is fine for a health check
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/healthy-threshold-count: "2"
    alb.ingress.kubernetes.io/unhealthy-threshold-count: "2"
    # alb.ingress.kubernetes.io/target-type: "ip"
    # alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    # alb.ingress.kubernetes.io/ssl-passthrough: "true"
    # alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: display-users-ingress
  defaultBackend:
    service:
      name: deployment-nodeport-svc
      port:
        number: 80
